--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -8,7 +8,7 @@
     <nav>
       <a href="/">Home</a>
       <a href="/about">About</a>
-      <a href="/blog/">Blog</a>
+      <a href="/blog">Blog</a>
     </nav>
     <h1>{{ page.title }}</h1>
     <section>
