--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,21 +1,23 @@
 <!doctype html>
 <html lang="en">
-  <head>
-    <meta charset="utf-8">
-    <title>{{ page.title }}</title>
-  </head>
-  <body>
-    <nav>
-      <a href="/">Home</a>
-      <a href="/about">About</a>
-      <a href="/blog">Blog</a>
-    </nav>
-    <h1>{{ page.title }}</h1>
-    <section>
-      {{ content }}
-    </section>
-    <footer>
-      &copy; to me
-    </footer>
+    <head>
+        <meta charset="utf-8">
+        <title>{{page.title}} - Tinydig</title>
+        <link rel="stylesheet" href="/css/style.css" />
+    </head>
+    <body>
+        <header>
+            <div class="brand">
+                <a href="/">Tinydig</a>
+            </div>
+            <nav>
+            </nav>
+        </header>
+
+        <h1 class="page-title">{{ page.title }}</h1>
+
+        <article>
+            <section>{{ content }}</section>
+        </article>
   </body>
 </html>
